// Copyright 2018 The Kura Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package storage;

message GetFileRequest {
    string key = 1;
}

message GetFileResponse {
    bytes file = 1;
}

message PutFileRequest {
    string key = 1;
    bytes file = 2;
}

message PutFileResponse { }

message DeleteFileRequest {
    string key = 1;
}

message DeleteFileResponse { }

message GetFileKeysRequest { }

message GetFileKeysResponse {
  repeated string keys = 1;
}

service StorageService {
    rpc GetFile (GetFileRequest) returns (GetFileResponse);
    rpc PutFile (PutFileRequest) returns (PutFileResponse);
    rpc DeleteFile (DeleteFileRequest) returns (DeleteFileResponse);
    rpc GetFileKeys (GetFileKeysRequest) returns (GetFileKeysResponse);
}
